# eurusd-quant

./: .gitignore  README.md  dashboard.py  pyproject.toml
config/: execution.yaml  portfolio_candidates.yaml  strategies.yaml
docs/: cross_pair_robustness.md  event_combination_analysis.md  event_combination_analysis_v2.md  event_edge_discovery.md  event_return_analyzer.md  event_strategy_sweeps.md  strategy_asia_drift_london_reversal.md  strategy_asian_range_breakout.md  strategy_asian_range_compression_breakout.md  strategy_atr_spike_new_high_low.md  strategy_break_retest_continuation.md  strategy_cup_handle_breakout.md  strategy_daily_extreme_move_reversal.md  strategy_double_impulse_exhaustion.md  strategy_double_top_bottom_reversal.md  strategy_false_breakout_reversal.md  strategy_filtered_london_breakout.md  strategy_head_shoulders_reversal.md  strategy_impulse_session_open.md  strategy_liquidity_sweep_reversal.md  strategy_london_impulse_ny_reversal.md  strategy_london_pullback_continuation.md  strategy_london_pullback_continuation_refined.md  strategy_london_range_breakout.md  strategy_matrix_status.md  strategy_multi_day_momentum_continuation.md  strategy_ny_impulse_mean_reversion.md  strategy_ny_liquidity_sweep_reversal.md  strategy_range_midpoint_reversion.md  strategy_session_breakout_continuation.md  strategy_session_liquidity_sweep_reversal.md  strategy_session_vwap_reversion.md  strategy_trend_exhaustion_reversal.md  strategy_volatility_expansion_after_compression.md  strategy_vwap_band_reversion_filtered.md  strategy_vwap_intraday_reversion.md  (+1 more)
(+322 files in other folders)
